--- a/excercises/1.5/package.json
+++ b/excercises/1.5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1.1",
+  "name": "1.2",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^3.0.1"
   }
 }
